# bsv-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
benches/: CLAUDE.md  hash_bench.rs  memory_bench.rs  primitives_bench.rs  script_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: CLAUDE.md  fuzz_base58.rs  fuzz_script_parser.rs  fuzz_transaction_parser.rs  fuzz_wire_protocol.rs
src/: CLAUDE.md  bignum.rs  encoding.rs  error.rs  hash.rs  lib.rs  p256.rs  symmetric.rs
src/auth/: CLAUDE.md  mod.rs  peer.rs  session_manager.rs  types.rs
src/auth/certificates/: CLAUDE.md  certificate.rs  master.rs  mod.rs  verifiable.rs
src/auth/transports/: CLAUDE.md  http.rs  mod.rs  websocket_transport.rs
src/auth/transports/socketio/: codec.rs  mod.rs
src/auth/utils/: CLAUDE.md  mod.rs  nonce.rs  validation.rs
src/bsv/: key_derivation.rs  mod.rs  polynomial.rs  schnorr.rs  shamir.rs  sighash.rs  tx_signature.rs
src/compat/: CLAUDE.md  base58.rs  bip32.rs  bsm.rs  ecies.rs  mod.rs
src/compat/bip39/: CLAUDE.md  mnemonic.rs  mod.rs
src/compat/bip39/wordlists/: CLAUDE.md  chinese_simplified.rs  chinese_traditional.rs  czech.rs  english.rs  french.rs  italian.rs  japanese.rs  korean.rs  mod.rs  spanish.rs
src/ec/: CLAUDE.md  ecdsa.rs  mod.rs  private_key.rs  public_key.rs  signature.rs
src/identity/: CLAUDE.md  client.rs  contacts.rs  mod.rs  types.rs
src/kvstore/: CLAUDE.md  global.rs  interpreter.rs  local.rs  mod.rs  types.rs
src/messages/: CLAUDE.md  encrypted.rs  mod.rs  signed.rs
src/overlay/: CLAUDE.md  facilitators.rs  historian.rs  host_reputation_tracker.rs  lookup_resolver.rs  mod.rs  overlay_admin_token_template.rs  retry.rs  topic_broadcaster.rs  types.rs
src/primitives/: CLAUDE.md  bignum.rs  drbg.rs  encoding.rs  hash.rs  mod.rs  p256.rs  symmetric.rs
src/primitives/bsv/: CLAUDE.md  mod.rs  polynomial.rs  schnorr.rs  shamir.rs  sighash.rs  tx_signature.rs
src/primitives/ec/: CLAUDE.md  ecdsa.rs  mod.rs  private_key.rs  public_key.rs  signature.rs
src/registry/: CLAUDE.md  client.rs  mod.rs  types.rs
src/script/: CLAUDE.md  address.rs  bip276.rs  chunk.rs  evaluation_error.rs  locking_script.rs  mod.rs  op.rs  script.rs  script_num.rs  spend.rs  template.rs  transaction.rs  unlocking_script.rs
src/script/templates/: CLAUDE.md  mod.rs  multisig.rs  p2pk.rs  p2pkh.rs  pushdrop.rs  rpuzzle.rs
src/storage/: CLAUDE.md  downloader.rs  mod.rs  types.rs  uploader.rs  utils.rs
src/totp/: CLAUDE.md  core.rs  mod.rs
src/transaction/: CLAUDE.md  beef.rs  beef_tx.rs  broadcaster.rs  chain_tracker.rs  fee_model.rs  input.rs  merkle_path.rs  mod.rs  output.rs  transaction.rs  tx_json.rs
src/transaction/broadcasters/: CLAUDE.md  arc.rs  mod.rs  teranode.rs  whatsonchain.rs
src/transaction/chain_trackers/: CLAUDE.md  block_headers_service.rs  mod.rs  whatsonchain.rs
src/transaction/fee_models/: CLAUDE.md  live_policy.rs  mod.rs  sats_per_kb.rs
src/util/: mod.rs  time.rs
src/wallet/: CLAUDE.md  cached_key_deriver.rs  client.rs  interface.rs  key_deriver.rs  mod.rs  proto_wallet.rs  types.rs  validation.rs
src/wallet/substrates/: CLAUDE.md  http_json.rs  http_wire.rs  mod.rs
src/wallet/wire/: CLAUDE.md  calls.rs  encoding.rs  mod.rs  processor.rs  transceiver.rs
tests/: CLAUDE.md  auth_cross_sdk_tests.rs  auth_integration_tests.rs  auth_peer_e2e_tests.rs  broadcaster_http_tests.rs  chaintracker_http_tests.rs  compat_bip39_tests.rs  compat_integration_tests.rs  conformance_beef.rs  conformance_scripts.rs  cross_sdk_tests.rs  drbg_tests.rs  ec_tests.rs  identity_tests.rs  integration_tests.rs  kvstore_global_tests.rs  kvstore_integration_tests.rs  live_policy_http_tests.rs  memory_profiling.rs  messages_tests.rs  overlay_admin_token_ts_parity_tests.rs  overlay_cross_sdk_tests.rs  overlay_http_tests.rs  overlay_integration_tests.rs  overlay_mock_tests.rs  registry_integration_tests.rs  script_vectors_tests.rs  sighash_tests.rs  storage_http_tests.rs  storage_tests.rs  template_tests.rs  transaction_tests.rs  wallet_tests.rs  wallet_wire_cross_sdk_tests.rs  wire_method_roundtrip_tests.rs
tests/transaction/: mod.rs
tests/transaction/vectors/: CLAUDE.md  beef_cross_sdk.rs  bigtx.rs  bump_invalid.rs  bump_valid.rs  mod.rs  tx_invalid.rs  tx_valid.rs
tests/vectors/: auth_certificate.json  overlay_admin_token.json  overlay_admin_token_ts_parity.json  overlay_types.json  script_invalid.json  script_valid.json  sighash.json  spend_valid.json
