[package]
name = "bsv-sdk"
version = "0.2.0"
edition = "2021"
description = "BSV blockchain SDK for Rust - primitives, script, transactions, and more"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bsv-blockchain/bsv-sdk-rust"
keywords = ["bitcoin", "bsv", "blockchain", "cryptocurrency", "sdk"]
categories = ["cryptography", "encoding", "parser-implementations"]

[dependencies]
# Hashing
sha2 = "0.10"
sha1 = "0.10"
ripemd = "0.1"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }

# Elliptic Curves (for later phases)
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
p256 = "0.13"

# Symmetric Encryption (for later phases)
aes-gcm = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }

# Big Integers
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

# Randomness
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

# Constant-time operations
subtle = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
bs58 = "0.5"
base64 = "0.22"

# Error handling
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Lazy initialization
lazy_static = "1.4"

# HTTP client (optional, for broadcasters and chain trackers)
reqwest = { version = "0.12", features = ["json"], optional = true }

# Async runtime (optional, for auth module)
tokio = { version = "1", features = ["sync", "time", "rt"], optional = true }

# Async futures (for overlay module parallel operations)
futures = "0.3"

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = ["primitives", "script"]
primitives = []
script = ["primitives"]
transaction = ["script"]
wallet = ["transaction"]
messages = ["wallet"]
compat = ["primitives"]
auth = ["wallet", "messages", "dep:tokio"]
overlay = ["wallet", "dep:tokio"]
wasm = ["getrandom/js"]
full = ["primitives", "script", "transaction", "wallet", "messages", "compat", "auth", "overlay"]
http = ["dep:reqwest"]

[[bench]]
name = "hash_bench"
harness = false

[[bench]]
name = "primitives_bench"
harness = false
