[package]
name = "bsv-rs"
version = "0.3.12"
edition = "2021"
description = "BSV blockchain SDK for Rust - primitives, script, transactions, and more"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Calhooon/bsv-rs"
homepage = "https://github.com/Calhooon/bsv-rs"
keywords = ["bitcoin", "bsv", "blockchain", "cryptocurrency", "sdk"]
categories = ["cryptography", "encoding", "parser-implementations"]

[dependencies]
# Hashing
sha2 = "0.10"
sha1 = "0.10"
ripemd = "0.1"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }

# Elliptic Curves (for later phases)
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
p256 = "0.13"

# Symmetric Encryption (for later phases)
aes-gcm = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }

# Big Integers
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

# Randomness
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

# Constant-time operations
subtle = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
bs58 = "0.5"
base64 = "0.22"

# Error handling
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Lazy initialization
lazy_static = "1.4"

# HTTP client (optional, for broadcasters and chain trackers)
reqwest = { version = "0.12", features = ["json"], optional = true }

# Async runtime (optional, for auth module)
tokio = { version = "1", features = ["sync", "time", "rt"], optional = true }

# WebSocket client (optional, for websocket transport)
tokio-tungstenite = { version = "0.24", features = ["native-tls"], optional = true }
futures-util = { version = "0.3", optional = true }

# Async futures (for overlay module parallel operations)
futures = "0.3"

# Runtime-agnostic timer (wasm32 only — CF Workers have no tokio time-driver)
futures-timer = { version = "3", optional = true }

# JS host bindings (wasm32 only — std::time::SystemTime is unimplemented on
# wasm32-unknown-unknown, so wall-clock helpers use `js_sys::Date::now()` there)
js-sys = { version = "0.3", optional = true }

# URL encoding (for storage module)
urlencoding = "2.1"

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1", features = ["rt", "macros", "net"] }
memory-stats = "1.2"
wiremock = "=0.6.2"

[dependencies.dhat]
version = "0.3"
optional = true

[features]
default = ["primitives", "script"]
primitives = []
script = ["primitives"]
transaction = ["script"]
wallet = ["transaction"]
messages = ["wallet"]
compat = ["primitives"]
totp = ["primitives"]
auth = ["wallet", "messages", "dep:tokio"]
overlay = ["wallet", "dep:tokio"]
storage = ["overlay"]
registry = ["overlay"]
kvstore = ["overlay"]
identity = ["auth", "overlay"]
# `futures-timer/wasm-bindgen` is REQUIRED on wasm32: without it `futures-timer`
# selects its native timer-thread backend, so `Delay::new` panics
# (`thread::spawn` is unsupported on wasm32-unknown-unknown) the first time the
# wasm `wait_with_timeout` (Peer handshake timeout) polls it — hanging/aborting
# `Peer::to_peer` in Cloudflare Workers / browser executors. The feature flips
# `futures-timer` to its `gloo-timers`/`setTimeout` backend, which works there.
wasm = ["getrandom/js", "dep:futures-timer", "futures-timer/wasm-bindgen", "dep:js-sys"]
full = ["primitives", "script", "transaction", "wallet", "messages", "compat", "totp", "auth", "overlay", "storage", "registry", "kvstore", "identity", "socketio"]
http = ["dep:reqwest"]
websocket = ["auth", "dep:tokio-tungstenite", "dep:futures-util"]
# Socket.IO 5 / Engine.IO 4 + BRC-103 transport. Substrate-agnostic:
# pulls in no new dependency (uses serde_json + async-trait + futures,
# all already required by `auth`), so enabling it cannot break a wasm32
# `auth` build.
socketio = ["auth"]
dhat-profiling = ["dep:dhat"]

[[bench]]
name = "hash_bench"
harness = false

[[bench]]
name = "primitives_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false

[[bench]]
name = "script_bench"
harness = false
